EX-514: Fix whitespace at bottom of image

--- a/src/app/content-blocks/gray-defcon-article-unit/gray-defcon-article-unit.component.scss
+++ b/src/app/content-blocks/gray-defcon-article-unit/gray-defcon-article-unit.component.scss
@@ -20,6 +20,7 @@ a {
 
 img {
   width: 100%;
+  display: block;
 }
 
 .image {
